Move Tag Selection out of Region (#151)
This is currently used to filter servers and security groups, but it has
broader appeal and should be applied to all list type APIs.
